changing form element to dd on instructions page

--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -34,11 +34,9 @@ $def with (page)
 	    <div class="smallColumn">
 	        <h1>Waypoints</h1>
 	        <dl>
-	            <wptName>Wpt 1</wptName>
-	            <form name= "wpt1">
-	            	lat:<input type="text" id="lat1" size="8">
-	            	lon:<input type="text" id="lon1" size="8">
-	            	type:<select id="waypointtype1">
+	            <dt>Wpt 1</dt>
+	            <dd id= "wpt1">lat:<input type="text" id="lat1" size="12">lon:<input type="text" id="lon1" size="12">type:
+	            	<select id="waypointtype1">
 	            			<option value="pointToPoint">Point to Point</option>
 	            			<option value="roundBuoy">Round Buoy</option>
 	            			<option value="ld_start_finish">ld Start Finish</option>
@@ -52,13 +50,11 @@ $def with (page)
 	            			<option value="sk_bottom_right">sk Bottom Right</option>
 	            		</select>
 	            	
-	            </form>
+	            </dd>
 	            
-	            <wptName>Wpt 2</wptName>
-	             <form name= "wpt2">
-	            	lat:<input type="text" id="lat2" size="8">
-	            	lon:<input type="text" id="lon2" size="8">
-	            	type:<select id="waypointtype2">
+	            <dt>Wpt 2</dt>
+	             <dd id= "wpt2">lat:<input type="text" id="lat2" size="12">lon:<input type="text" id="lon2" size="12">type:
+	             	<select id="waypointtype2">
 	            			<option value="pointToPoint">Point to Point</option>
 	            			<option value="roundBuoy">Round Buoy</option>
 	            			<option value="ld_start_finish">ld Start Finish</option>
@@ -70,15 +66,12 @@ $def with (page)
 	            			<option value="sk_top_right">sk Top Right</option>
 	            			<option value="sk_bottom_left">sk Bottom Left</option>
 	            			<option value="sk_bottom_right">sk Bottom Right</option>
-	            		</select>
-	            	
-	            </form>
+	            		</select>  	
+	            </dd>
 	
-	            <wptName>Wpt 3</wptName>
-	             <form name= "wpt3">
-	            	lat:<input type="text" id="lat3" size="8">
-	            	lon:<input type="text" id="lon3" size="8">
-	            	type:<select id="waypointtype3">
+	            <dt>Wpt 3</dt>
+	             <dd id= "wpt3">lat:<input type="text" id="lat3" size="12">lon:<input type="text" id="lon3" size="12">type:
+	             	<select id="waypointtype3">
 	            			<option value="pointToPoint">Point to Point</option>
 	            			<option value="roundBuoy">Round Buoy</option>
 	            			<option value="ld_start_finish">ld Start Finish</option>
@@ -90,15 +83,12 @@ $def with (page)
 	            			<option value="sk_top_right">sk Top Right</option>
 	            			<option value="sk_bottom_left">sk Bottom Left</option>
 	            			<option value="sk_bottom_right">sk Bottom Right</option>
-	            		</select>
-	            	
-	            </form>
+	            		</select>  	
+	            </dd>
 	            
-	            <wptName>Wpt 4</wptName>
-	           <form name= "wpt4">
-	            	lat:<input type="text" id="lat4" size="8">
-	            	lon:<input type="text" id="lon4" size="8">
-	            	type:<select id="waypointtype4">
+	            <dt>Wpt 4</dt>
+	           <dd id= "wpt4">lat:<input type="text" id="lat4" size="12">lon:<input type="text" id="lon4" size="12">type:
+	           	<select id="waypointtype4">
 	            			<option value="pointToPoint">Point to Point</option>
 	            			<option value="roundBuoy">Round Buoy</option>
 	            			<option value="ld_start_finish">ld Start Finish</option>
@@ -112,7 +102,7 @@ $def with (page)
 	            			<option value="sk_bottom_right">sk Bottom Right</option>
 	            		</select>
 	            	
-	            </form>
+	            </dd>
 	        </dl>
 	      </div>
     </div>
@@ -122,18 +112,12 @@ $def with (page)
         <h1>Boundaries</h1>
         <dl>
             <dt>Bound1</dt>
-            <form>
-            	lat:<input type="text" id="blat1" size="8">
-            	lon:<input type="text" id="blon1" size="8">
-            	radius: <input type="text" id="brad1" size="8">
-            </form>
+            <dd>lat:<input type="text" id="blat1" size="12">lon:<input type="text" id="blon1" size="12">radius: <input type="text" id="brad1" size="12">
+            </dd>
            
             <dt>Bound2</dt>
-            <form>
-            	lat:<input type="text" id="blat2" size="8">
-            	lon:<input type="text" id="blon2" size="8">
-            	radius: <input type="text" id="brad2" size="8">
-            </form>
+            <dd>lat:<input type="text" id="blat2" size="12">lon:<input type="text" id="blon2" size="12">radius: <input type="text" id="brad2" size="12">
+            </dd>
         </dl>
     </div>
     
