replacing 4 sk waypoint types with 1 type called station_keeping

--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -44,10 +44,7 @@ $def with (page)
 	            			<option value="ld_second">ld Second</option>
 	            			<option value="nav_first">nav First</option>
 	            			<option value="nav_finish">nav Second</option>
-	            			<option value="sk_top_left">sk Top Left</option>
-	            			<option value="sk_top_right">sk Top Right</option>
-	            			<option value="sk_bottom_left">sk Bottom Left</option>
-	            			<option value="sk_bottom_right">sk Bottom Right</option>
+	            			<option value="station_keeping">Station Keeping</option>
 	            		</select>
 	            	
 	            </dd>
@@ -62,10 +59,7 @@ $def with (page)
 	            			<option value="ld_second">ld Second</option>
 	            			<option value="nav_first">nav First</option>
 	            			<option value="nav_finish">nav Second</option>
-	            			<option value="sk_top_left">sk Top Left</option>
-	            			<option value="sk_top_right">sk Top Right</option>
-	            			<option value="sk_bottom_left">sk Bottom Left</option>
-	            			<option value="sk_bottom_right">sk Bottom Right</option>
+	            			<option value="station_keeping">Station Keeping</option>
 	            		</select>  	
 	            </dd>
 	
@@ -79,10 +73,7 @@ $def with (page)
 	            			<option value="ld_second">ld Second</option>
 	            			<option value="nav_first">nav First</option>
 	            			<option value="nav_finish">nav Second</option>
-	            			<option value="sk_top_left">sk Top Left</option>
-	            			<option value="sk_top_right">sk Top Right</option>
-	            			<option value="sk_bottom_left">sk Bottom Left</option>
-	            			<option value="sk_bottom_right">sk Bottom Right</option>
+	            			<option value="station_keeping">Station Keeping</option>
 	            		</select>  	
 	            </dd>
 	            
@@ -96,12 +87,8 @@ $def with (page)
 	            			<option value="ld_second">ld Second</option>
 	            			<option value="nav_first">nav First</option>
 	            			<option value="nav_finish">nav Second</option>
-	            			<option value="sk_top_left">sk Top Left</option>
-	            			<option value="sk_top_right">sk Top Right</option>
-	            			<option value="sk_bottom_left">sk Bottom Left</option>
-	            			<option value="sk_bottom_right">sk Bottom Right</option>
+	            			<option value="station_keeping">Station Keeping</option>
 	            		</select>
-	            	
 	            </dd>
 	        </dl>
 	      </div>
