added updateBoundaries and updateWaypoints functions

--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -36,9 +36,9 @@ $def with (page)
 	        <dl>
 	            <wptName>Wpt 1</wptName>
 	            <form name= "wpt1">
-	            	lat:<input type="text" id="lat1" size="8">
-	            	lon:<input type="text" id="lon1" size="8">
-	            	type:<select id="waypointtype1">
+	            	lat:<input type="text" id="lat1" size="8" onchange="updateWaypoints(0)">
+	            	lon:<input type="text" id="lon1" size="8" onchange="updateWaypoints(0)" >
+	            	type:<select id="waypointtype1" onchange="updateWaypoints(0)" >
 	            			<option value="pointToPoint">Point to Point</option>
 	            			<option value="roundBuoy">Round Buoy</option>
 	            			<option value="ld_start_finish">ld Start Finish</option>
@@ -55,10 +55,10 @@ $def with (page)
 	            </form>
 	            
 	            <wptName>Wpt 2</wptName>
-	             <form name= "wpt2">
-	            	lat:<input type="text" id="lat2" size="8">
-	            	lon:<input type="text" id="lon2" size="8">
-	            	type:<select id="waypointtype2">
+	             <form name= "wpt2" >
+	            	lat:<input type="text" id="lat2" size="8" onchange="updateWaypoints(1)">
+	            	lon:<input type="text" id="lon2" size="8" onchange="updateWaypoints(1)">
+	            	type:<select id="waypointtype2" onchange="updateWaypoints(1)">
 	            			<option value="pointToPoint">Point to Point</option>
 	            			<option value="roundBuoy">Round Buoy</option>
 	            			<option value="ld_start_finish">ld Start Finish</option>
@@ -75,10 +75,10 @@ $def with (page)
 	            </form>
 	
 	            <wptName>Wpt 3</wptName>
-	             <form name= "wpt3">
-	            	lat:<input type="text" id="lat3" size="8">
-	            	lon:<input type="text" id="lon3" size="8">
-	            	type:<select id="waypointtype3">
+	             <form name= "wpt3" >
+	            	lat:<input type="text" id="lat3" size="8" onchange="updateWaypoints(2)">
+	            	lon:<input type="text" id="lon3" size="8" onchange="updateWaypoints(2)">
+	            	type:<select id="waypointtype3" onchange="updateWaypoints(2)">
 	            			<option value="pointToPoint">Point to Point</option>
 	            			<option value="roundBuoy">Round Buoy</option>
 	            			<option value="ld_start_finish">ld Start Finish</option>
@@ -96,9 +96,9 @@ $def with (page)
 	            
 	            <wptName>Wpt 4</wptName>
 	           <form name= "wpt4">
-	            	lat:<input type="text" id="lat4" size="8">
-	            	lon:<input type="text" id="lon4" size="8">
-	            	type:<select id="waypointtype4">
+	            	lat:<input type="text" id="lat4" size="8" onchange="updateWaypoints(3)">
+	            	lon:<input type="text" id="lon4" size="8" onchange="updateWaypoints(3)">
+	            	type:<select id="waypointtype4" onchange="updateWaypoints(3)">
 	            			<option value="pointToPoint">Point to Point</option>
 	            			<option value="roundBuoy">Round Buoy</option>
 	            			<option value="ld_start_finish">ld Start Finish</option>
@@ -122,17 +122,17 @@ $def with (page)
         <h1>Boundaries</h1>
         <dl>
             <dt>Bound1</dt>
-            <form>
-            	lat:<input type="text" id="blat1" size="8">
-            	lon:<input type="text" id="blon1" size="8">
-            	radius: <input type="text" id="brad1" size="8">
+            <form >
+            	lat:<input type="text" id="blat1" size="8" onchange="updateBoundaries(0)">
+            	lon:<input type="text" id="blon1" size="8" onchange="updateBoundaries(0)">
+            	radius: <input type="text" id="brad1" size="8" onchange="updateBoundaries(0)">
             </form>
            
             <dt>Bound2</dt>
             <form>
-            	lat:<input type="text" id="blat2" size="8">
-            	lon:<input type="text" id="blon2" size="8">
-            	radius: <input type="text" id="brad2" size="8">
+            	lat:<input type="text" id="blat2" size="8" onchange="updateBoundaries(1)">
+            	lon:<input type="text" id="blon2" size="8" onchange="updateBoundaries(1)">
+            	radius: <input type="text" id="brad2" size="8" onchange="updateBoundaries(1)">
             </form>
         </dl>
     </div>
