--- a/ui/templates/overview.html
+++ b/ui/templates/overview.html
@@ -16,6 +16,28 @@ $def with (page)
 <!-- START rightColumn -->
 <div id="rightColumn">
     
+      <div class="widget dataDisplayTableWidget">
+        <h1>Connection Status</h1>
+        <dl>
+            <dt>Online/Offline</dt>
+            <dd id="connectionStatus-onlineOfflineCell"></dd>
+            
+            <dt>Battery Level</dt>
+            <dd id="connectionStatus-batteryLevelCell"></dd>
+            
+            <dt>GPS # of Satellites</dt>
+            <dd id="connectionStatus-satNumCell"></dd>
+            
+            <dt>GPS Accuracy</dt>
+            <dd id="connectionStatus-gpsAccuracyCell"></dd>
+            
+            <dt>Hardware Health</dt>
+            <dd id="connectionStatus-hardwareHealthCell"></dd>
+        </dl>
+    </div>
+    
+    <br  style="clear:both" />
+    
     <div class="widget dataDisplayTableWidget">
         <h1>Telemetry</h1>
         <dl>
@@ -25,16 +47,29 @@ $def with (page)
             <dt>Wind Direction</dt>
             <dd id="telemetry-windDirectionCell"></dd>
             
-            
             <dt>Latitude</dt>
             <dd id="telemetry-latitudeCell"></dd>
             
             <dt>Longitude</dt>
             <dd id="telemetry-longitudeCell"></dd>
+            
+            <dt>Rudder</dt>
+            <dd id="telemetry-rudderCell"></dd>
         </dl>
     </div>
     
+    <br  style="clear:both" />
     
+    <div class="widget dataDisplayTableWidget">
+        <h1>Current Process</h1>
+        <dl>
+            <dt>Task</dt>
+            <dd id="currentProcess-currentTaskCell"></dd>
+            
+            <dt>Time to Completion</dt>
+            <dd id="currentProcess-timeToCompletionCell"></dd>
+        </dl>
+    </div>
 
 </div>
 <!-- END rightColumn -->
