code and unit tests to make instructions python object for GuiHandler

--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -21,10 +21,10 @@ $def with (page)
 		    <div class="ui-widget">
 		        <select id="description" onchange="setChallenge(this)">
 				  <option value="none">None</option>
-				  <option value="navigation">Navigation</option>
-				  <option value="station_keepping">Station Keeping</option>
-				  <option value="long_distance">Long Distance</option>
-				  <option value="chase_race">Chase Race</option>
+				  <option value="challenge.navigation">Navigation</option>
+				  <option value="challenge.stationkeeping">Station Keeping</option>
+				  <option value="challenge.longdistance">Long Distance</option>
+				  <option value="challenge.chaserace">Chase Race</option>
 				</select>
 			</div>
     </div>
