Added delete button to the waypoints

--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -46,6 +46,7 @@ $def with (page)
 	            			<option value="nav_finish">nav Second</option>
 	            			<option value="station_keeping">Station Keeping</option>
 	            		</select>
+	            	<button id="b1" onclick="deleteWaypoint(0)">Delete</button>
 	            	
 	            </dd>
 	            
@@ -60,7 +61,8 @@ $def with (page)
 	            			<option value="nav_first">nav First</option>
 	            			<option value="nav_finish">nav Second</option>
 	            			<option value="station_keeping">Station Keeping</option>
-	            		</select>  	
+	            		</select>  
+	            		<button id="b2" onclick="deleteWaypoint(1)">Delete</button>	
 	            </dd>
 	
 	            <dt>Wpt 3</dt>
@@ -75,6 +77,7 @@ $def with (page)
 	            			<option value="nav_finish">nav Second</option>
 	            			<option value="station_keeping">Station Keeping</option>
 	            		</select>  	
+	            		<button id="b3" onclick="deleteWaypoint(2)">Delete</button>
 	            </dd>
 	            
 	            <dt>Wpt 4</dt>
@@ -89,6 +92,7 @@ $def with (page)
 	            			<option value="nav_finish">nav Second</option>
 	            			<option value="station_keeping">Station Keeping</option>
 	            		</select>
+	            		<button id="b4" onclick="deleteWaypoint(3)">Delete</button>
 	            </dd>
 	        </dl>
 	      </div>
