--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -46,7 +46,7 @@ $def with (page)
 	            			<option value="nav_finish">nav Second</option>
 	            			<option value="station_keeping">Station Keeping</option>
 	            		</select>
-	            	<button id="b1" onclick="deleteWaypoint(0)">Delete</button>
+	            	<button id="b1" onclick="deleteWaypoint(0)">X</button>
 	            	
 	            </dd>
 	            
@@ -62,7 +62,7 @@ $def with (page)
 	            			<option value="nav_finish">nav Second</option>
 	            			<option value="station_keeping">Station Keeping</option>
 	            		</select>  
-	            		<button id="b2" onclick="deleteWaypoint(1)">Delete</button>	
+	            		<button id="b2" onclick="deleteWaypoint(1)">X</button>	
 	            </dd>
 	
 	            <dt>Wpt 3</dt>
@@ -77,7 +77,7 @@ $def with (page)
 	            			<option value="nav_finish">nav Second</option>
 	            			<option value="station_keeping">Station Keeping</option>
 	            		</select>  	
-	            		<button id="b3" onclick="deleteWaypoint(2)">Delete</button>
+	            		<button id="b3" onclick="deleteWaypoint(2)">X</button>
 	            </dd>
 	            
 	            <dt>Wpt 4</dt>
@@ -92,7 +92,7 @@ $def with (page)
 	            			<option value="nav_finish">nav Second</option>
 	            			<option value="station_keeping">Station Keeping</option>
 	            		</select>
-	            		<button id="b4" onclick="deleteWaypoint(3)">Delete</button>
+	            		<button id="b4" onclick="deleteWaypoint(3)">X</button>
 	            </dd>
 	        </dl>
 	      </div>
@@ -103,11 +103,11 @@ $def with (page)
         <h1>Boundaries</h1>
         <dl>
             <dt>Bound1</dt>
-            <dd>lat:<input type="text" id="blat1" size="12">lon:<input type="text" id="blon1" size="12">radius: <input type="text" id="brad1" size="12">
+            <dd>lat:<input type="text" id="blat1" size="12">lon:<input type="text" id="blon1" size="12">radius: <input type="text" id="brad1" size="12"><button id="bb1" onclick="deleteBoundary(0)">X</button>
             </dd>
            
             <dt>Bound2</dt>
-            <dd>lat:<input type="text" id="blat2" size="12">lon:<input type="text" id="blon2" size="12">radius: <input type="text" id="brad2" size="12">
+            <dd>lat:<input type="text" id="blat2" size="12">lon:<input type="text" id="blon2" size="12">radius: <input type="text" id="brad2" size="12"><button id="bb2" onclick="deleteBoundary(1)">X</button>
             </dd>
         </dl>
     </div>
