--- a/ui/templates/mapWidget.html
+++ b/ui/templates/mapWidget.html
@@ -1,7 +1,20 @@
 $def with (page)
+<head>
+	<link rel="stylesheet" type="text/css" href="/ui/static/css/widgets/mapWidget.css">
+	<!--This is an internal style if we decide to use it instead of an external one <style>
+		#map {
+			width:100%;
+			height:400px; 
+			border-style:solid;
+			border-width:10px;
+			border-color:#5f9be3;
+			border-radius:12px;
+		}
+	</style> -->
+</head>
 <!-- body.onload is called once the page is loaded (call the 'init' function) -->
     
     <!-- define a DIV into which the map will appear. Make it take up the whole window -->
-    <div style="width:100%; height:400px; border:10px solid #5f9be3; border-radius:12px;" id="map" margin="0px"></div>
+    <div  id="map" margin="10px"></div>
    
- 
+ <!--The former styling--style="width:100%; height:400px; border:10px solid #5f9be3; border-radius:12px;" -->
