tidying up control integration before testing

--- a/ui/templates/overview.html
+++ b/ui/templates/overview.html
@@ -25,8 +25,8 @@ $def with (page)
             <dt>GPS HDOP</dt>
             <dd id="connectionStatus-gpsAccuracyCell"></dd>
             
-            <dt>Hardware Health</dt>
-            <dd id="connectionStatus-hardwareHealthCell"></dd>
+            <dt>Mode</dt>
+            <dd id="connectionStatus-autoMode"></dd>
         </dl>
     </div>
     
@@ -47,11 +47,8 @@ $def with (page)
             <dt>Longitude</dt>
             <dd id="telemetry-longitudeCell"></dd>
             
-            <dt>Course</dt>
-            <dd id="telemetry-courseHeading"></dd>
-            
-            <dt>Steer Method</dt>
-            <dd id="telemetry-steerMethod"></dd>            
+            <dt>Rudder Angle</dt>
+            <dd id="telemetry-rudderCell"></dd>           
         </dl>
     </div>
     
