fixing nomenclature of waypoint types in instructions

--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -20,11 +20,11 @@ $def with (page)
         <h1>Challenge</h1>
 		    <div class="ui-widget">
 		        <select id="description" onchange="setChallenge(this)">
-				  <option value="none">None</option>
-				  <option value="challenge.navigation">Navigation</option>
-				  <option value="challenge.stationkeeping">Station Keeping</option>
-				  <option value="challenge.longdistance">Long Distance</option>
-				  <option value="challenge.chaserace">Chase Race</option>
+				  <option value="NONE">None</option>
+				  <option value="navigation">Navigation</option>
+				  <option value="stationkeeping">Station Keeping</option>
+				  <option value="longdistance">Long Distance</option>
+				  <option value="chaserace">Chase Race</option>
 				</select>
 			</div>
     </div>
