Fixed elapsed time on overview page

--- a/ui/templates/overview.html
+++ b/ui/templates/overview.html
@@ -60,8 +60,8 @@ $def with (page)
             <dt>Task</dt>
             <dd id="currentProcess-currentTaskCell"></dd>
             
-            <dt>Time to Completion</dt>
-            <dd id="currentProcess-timeToCompletionCell"></dd>
+            <dt>Elapsed Time</dt>
+            <dd id="currentProcess-elapsedTimeCell"></dd>
         </dl>
     </div>
 
