GUI provides exitSpeed for station keeping

--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -56,12 +56,13 @@ $def with (page)
     </div>
     
     <div class="widget dataDisplayTableWidget">
-        <h1>Rounding Direction</h1>
+        <h1>Rounding  | skSpeed</h1>
 		    <div class="ui-widget">
 		        <select id="rounding" onchange="setRounding(this)">
 				  <option value="port">port</option>
 				  <option value="starboard">starboard</option>
 				</select>
+				<input type="text" id="SK_exit_speed" size="8" onkeyup="setSK_exit_speed(this)">
 			</div>
     </div>
     
